@@ -1,2 +1,8 @@
 # TransportNetwork
 My Master's Thesis
+
+In order to run application after Java 8 use the following command (when in the directory containing the TransportNetwork.jar file)
+
+java --module-path $PATH_TO_JAVAFX_SDK/lib --add-modules=javafx.controls,javafx.fxml -jar TransportNetwork.jar
+
+After --module-path type in the path to JavaFX SDK which you can download for example here :  https://gluonhq.com/products/javafx/
